--- a/landing page.css
+++ b/landing page.css
@@ -1,3 +1,4 @@
+/*this is a comment*/
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 *{
     font-family: 'Open Sans', sans-serif;
