--- a/landing page.css
+++ b/landing page.css
@@ -18,10 +18,7 @@ ul{
 li{
     float:left;
     color:rgb(234, 144, 120);
-    text-decoration: none;
     list-style-type: none;
-    align-items: center;
-    justify-content: center;
     height:30px;
     width:20%;
     display:block;
@@ -31,7 +28,8 @@ li a{
     text-decoration: none;
     display:block;
     height:50px;
-
+    text-align: center;
+    line-height: 50px;
 }
 ul a:hover{
     color:rgb(101, 194, 173);
@@ -106,4 +104,10 @@ ul a:hover{
 .aboutme a:hover{
     background-color:rgb(22, 163, 229) ;
     border-radius: 15px;
+}
+.contact{
+    position:fixed;
+    top: 200px;
+    right:0px;
+    width: 25px;
 }
